--- a/sx_ledgers_v2.ipynb
+++ b/sx_ledgers_v2.ipynb
@@ -204,7 +204,8 @@
     "domeyko = joined_years[joined_years['DESCRIPCION'].str.contains( 'domeyko', case=False ) == True]\n",
     "corso = joined_years[joined_years['DESCRIPCION'].str.contains( 'santa lucia', case=False ) == True]\n",
     "angamos = joined_years[joined_years['DESCRIPCION'].str.contains( 'angamos', case=False ) == True]\n",
-    "santaLucia = joined_years[joined_years['DESCRIPCION'].str.contains( 'don dario', case=False ) == True]\n",
+    "santaLucia = joined_years[joined_years['DESCRIPCION'].str.contains( 'santa lucia', case=False ) == True]\n",
+    "donDario = joined_years[joined_years['DESCRIPCION'].str.contains( 'don dario', case=False ) == True]\n",
     "\n",
     "\n",
     "\n",
@@ -213,12 +214,13 @@
     "joined_years['andino'  ]        =joined_years['DESCRIPCION'].str.contains('ANDINO', case=False)\n",
     "joined_years['storage'  ]       =joined_years['DESCRIPCION'].str.contains('storage', case=False)\n",
     "joined_years['pelequen'  ]      =joined_years['DESCRIPCION'].str.contains('pelequen', case=False)\n",
-    "joined_years['quebradaTalca' ]  =joined_years['DESCRIPCION'].str.contains('talca', case=False)\n",
+    "joined_years['quebrada_Talca' ]  =joined_years['DESCRIPCION'].str.contains('talca', case=False)\n",
     "joined_years['greenfield'  ]    =joined_years['DESCRIPCION'].str.contains('greenfield', case=False)\n",
     "joined_years['domeyko'  ]       =joined_years['DESCRIPCION'].str.contains('domeyko', case=False)\n",
     "joined_years['corso'  ]         =joined_years['DESCRIPCION'].str.contains('santa lucia', case=False)\n",
     "joined_years['angamos'  ]       =joined_years['DESCRIPCION'].str.contains('angamos', case=False)\n",
-    "joined_years['santaLucia'  ]    =joined_years['DESCRIPCION'].str.contains('don dario', case=False)\n",
+    "joined_years['santa_Lucia'  ]    =joined_years['DESCRIPCION'].str.contains('santa lucia', case=False)\n",
+    "joined_years['don_Dario'  ]    =joined_years['DESCRIPCION'].str.contains('don dario', case=False)\n",
     "\n",
     "\n",
     "def check_false(*args):\n",
@@ -242,6 +244,7 @@
     "    x['corso'],\n",
     "    x['angamos'],\n",
     "    x['santaLucia'],\n",
+    "    x['don_Dario'],\n",
     "), axis=1)\n",
     "\n",
     "#\n",
@@ -290,10 +293,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -340,10 +340,7 @@
     "GDF Projects Summary\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
