--- a/LEDGERS_STATIC(PRE 2023).ipynb
+++ b/LEDGERS_STATIC(PRE 2023).ipynb
@@ -21,10 +21,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -35,10 +32,7 @@
     "## 1. STATIC LEDGERS"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -60,9 +54,9 @@
     "# and22Y\n",
     "\n",
     "\n",
-    "#filenames\n",
+    "#I. FILENAMES\n",
     "\n",
-    "#FORMER FILES\n",
+    "# 1A : FORMER FILES - SONNEDIX CHILE \n",
     "\n",
     "d_fileName = \"20221231_SX Chile_General Ledger Dic22 (Acum).xlsx\"\n",
     "c_fileName = \"20211231_SX Chile_General Ledger Dic21 (Acum).xlsx\"\n",
@@ -70,21 +64,63 @@
     "a_fileName = \"20191231_SX Chile_General Ledger December 2019 (Acum).xlsx\"\n",
     "z_fileName = '2018_mayor_SXChile.xlsx'\n",
     "\n",
+    "# 1B : NEW FILES - OTHER SPVs\n",
     "\n",
-    "\n",
-    "\n",
-    "# NEW FILES\n",
-    "\n",
-    "# sxc23M_filename = \"20230331_SX Chile_General Ledger Mar23 (Acum).xlsx\"\n",
     "pel21Y_filename   = \"20211231_Pelequen_General Ledger Dic21 (Acum).xlsx\"\n",
     "pel22Y_filename   = \"20221231_Pelequén_General Ledger Dic22 (Acum)(17.Feb.2023).xlsx\"\n",
-    "# pel23M_filename  = \"20230331_Pelequén_General Ledger Mar23 (Acum).xlsx\"\n",
     "dar22Y_filename   = \"20221231_Don Dario_General Ledger Dic22 (Acum) (17.Feb.2023).xlsx\"\n",
-    "# dar23M_filename  = \"20230331_Don Dario_General Ledger Mar23 (Acum).xlsx\"\n",
     "and20Y_filename   = \"20201231_Parque Andino_Libro Mayor Dic20 (Acum).xlsx\"\n",
     "and21Y_filename   = \"20211231_Parque Andino_General Ledger Dic21 (Acum).xlsx\"\n",
     "and22Y_filename   = \"20221231_Parque Andino_General Ledger Dic22 (Acum) (14.04.2023).xlsx\"\n",
-    "# and23M_filename  = \"20230331_Andino Occidente_General Ledger Mar23 (Acum).xlsx\"\n",
+    "\n",
+    "# 1C : UPDATABLE FILES - 2023 CUMULATIVE ALL\n",
+    "\n",
+    "# sxcUPDATE_filename = \"20230331_SX Chile_General Ledger Mar23 (Acum).xlsx\"\n",
+    "# pelUPDATE_filename  = \"20230331_Pelequén_General Ledger Mar23 (Acum).xlsx\"\n",
+    "# darUPDATE_filename  = \"20230331_Don Dario_General Ledger Mar23 (Acum).xlsx\"\n",
+    "\n",
+    "#Range Data\n",
+    "\n",
+    "universal_range = 'a1:o40000'\n",
+    "\n",
+    "#II. SHEETNAMES\n",
+    "pel21Y_rangeData   = 'a1:o40000'\n",
+    "pel22Y_rangeData   = 'a1:o40000'\n",
+    "dar22Y_rangeData   = 'a1:o40000'\n",
+    "and20Y_rangeData   = 'a1:o40000'\n",
+    "and21Y_rangeData   = 'a1:o40000'\n",
+    "and22Y_rangeData   = 'a1:o40000'\n",
+    "andUPDATE_rangeData  = 'a1:o40000'\n",
+    "\n",
+    "#2A\n",
+    "d_sheet = 'CW202301265BEB'\n",
+    "c_sheet = 'CW20220126B561'\n",
+    "b_sheet = 'USD'\n",
+    "a_sheet = 'CW202001218740'\n",
+    "z_sheet = '2018'\n",
+    "\n",
+    "#2B\n",
+    "pel21Y_sheet   = 'CW20220124C534'\n",
+    "pel22Y_sheet   = 'CW202302173EE9'\n",
+    "dar22Y_sheet   = 'CW20230217B3F'\n",
+    "and20Y_sheet   = 'CW202101156519'\n",
+    "and21Y_sheet   = 'CW20220121AB25'\n",
+    "and22Y_sheet   = 'CW20230412B923'\n",
+    "\n",
+    "\n",
+    "#2C\n",
+    "\n",
+    "# pending\n",
+    "\n",
+    "#1c\n",
+    "pel21Y_book = xw.Book(pel21Y_filename)\n",
+    "pel22Y_book = xw.Book(pel22Y_filename)\n",
+    "dar22Y_book = xw.Book(dar22Y_filename)\n",
+    "and20Y_book = xw.Book(and20Y_filename)\n",
+    "and21Y_book = xw.Book(and21Y_filename)\n",
+    "and22Y_book = xw.Book(and22Y_filename)\n",
+    "\n",
+    "# andUPDATE_filename  = \"20230331_Andino Occidente_General Ledger Mar23 (Acum).xlsx\"\n",
     "\n",
     "#dumpfile\n",
     "\n",
@@ -94,64 +130,29 @@
     "dump_sheet = 'Sheet1'\n",
     "dump_sheet_2 = 'Sheet2'\n",
     "\n",
-    "#Range Data\n",
-    "\n",
-    "pel21Y_rangeData   = 'a1:o40000'\n",
-    "pel22Y_rangeData   = 'a1:o40000'\n",
-    "dar22Y_rangeData   = 'a1:o40000'\n",
-    "and20Y_rangeData   = 'a1:o40000'\n",
-    "and21Y_rangeData   = 'a1:o40000'\n",
-    "and22Y_rangeData   = 'a1:o40000'\n",
-    "and23M_rangeData  = 'a1:o40000'\n",
-    "\n",
-    "\n",
-    "sxc23M_sheet = 'CW20230410DFC0'\n",
-    "pel21Y_sheet   = 'CW20220124C534'\n",
-    "pel22Y_sheet   = 'CW202302173EE9'\n",
-    "pel23M_sheet  = 'CW2023041083E4'\n",
-    "dar22Y_sheet   = 'CW20230217B3F'\n",
-    "dar23M_sheet  = 'CW20230417D4F3'\n",
-    "and20Y_sheet   = 'CW202101156519'\n",
-    "and21Y_sheet   = 'CW20220121AB25'\n",
-    "and22Y_sheet   = 'CW20230412B923'\n",
-    "and23M_sheet  = 'CW202304101220'\n",
-    "\n",
-    "\n",
-    "sxc23M_book = xw.Book(sxc23M_filename)\n",
-    "pel21Y_book = xw.Book(pel21Y_filename)\n",
-    "pel22Y_book = xw.Book(pel22Y_filename)\n",
-    "pel23M_book = xw.Book(pel23M_filename)\n",
-    "dar22Y_book = xw.Book(dar22Y_filename)\n",
-    "dar23M_book = xw.Book(dar23M_filename)\n",
-    "and20Y_book = xw.Book(and20Y_filename)\n",
-    "and21Y_book = xw.Book(and21Y_filename)\n",
-    "and22Y_book = xw.Book(and22Y_filename)\n",
-    "and23M_book = xw.Book(and23M_filename)\n",
-    "\n",
-    "\n",
-    "\"--------SXC23M--------------------------------------------------------------------------------------------------------\"\n",
+    "\"--------sxcUPDATE--------------------------------------------------------------------------------------------------------\"\n",
     "\n",
     "#MAKE DATAFRAME FROM SPREADSHEET\n",
-    "sxc23M_data = sxc23M_book.sheets(sxc23M_sheet).range(sxc23M_rangeData).value\n",
-    "df_sxc23M = pd.DataFrame(sxc23M_data)\n",
+    "sxcUPDATE_data = sxcUPDATE_book.sheets(sxcUPDATE_sheet).range(sxcUPDATE_rangeData).value\n",
+    "df_sxcUPDATE = pd.DataFrame(sxcUPDATE_data)\n",
     "\n",
     "#DROP UNNECESARY COLUMNS\n",
-    "df_sxc23M_2 = df_sxc23M.drop([5,6,7,10], axis=1)\n",
-    "df_sxc23M_3 = df_sxc23M_2[df_sxc23M_2[0].str.contains('SALDO ANTERIOR')==False]\n",
-    "df_sxc23M_4 = df_sxc23M_3.dropna(thresh=2)\n",
+    "df_sxcUPDATE_2 = df_sxcUPDATE.drop([5,6,7,10], axis=1)\n",
+    "df_sxcUPDATE_3 = df_sxcUPDATE_2[df_sxcUPDATE_2[0].str.contains('SALDO ANTERIOR')==False]\n",
+    "df_sxcUPDATE_4 = df_sxcUPDATE_3.dropna(thresh=2)\n",
     "\n",
     "# ACCOUNT NAMES\n",
-    "df_sxc23M_accounts = df_sxc23M_2[df_sxc23M_2[0].str.contains('SALDO ANTERIOR')==True]\n",
+    "df_sxcUPDATE_accounts = df_sxcUPDATE_2[df_sxcUPDATE_2[0].str.contains('SALDO ANTERIOR')==True]\n",
     "\n",
     "#MAKING ROW ONE THE HEADER\n",
-    "df_sxc23M_4.columns = df_sxc23M_4.iloc[0]\n",
-    "df_sxc23M_4 = df_sxc23M_4[1:]\n",
+    "df_sxcUPDATE_4.columns = df_sxcUPDATE_4.iloc[0]\n",
+    "df_sxcUPDATE_4 = df_sxcUPDATE_4[1:]\n",
     "\n",
     "#PARSE DATE\n",
-    "df_sxc23M_4['FECHA']=pd.to_datetime(df_sxc23M_4['FECHA'], dayfirst=True)\n",
+    "df_sxcUPDATE_4['FECHA']=pd.to_datetime(df_sxcUPDATE_4['FECHA'], dayfirst=True)\n",
     "\n",
     "#COMPANY COLUMN\n",
-    "df_sxc23M_4['ENTITY']='sx_chile_holding'\n",
+    "df_sxcUPDATE_4['ENTITY']='sx_chile_holding'\n",
     "\n",
     "\n",
     "\n",
@@ -202,28 +203,28 @@
     "df_pel22Y_4['FECHA']=pd.to_datetime(df_pel22Y_4['FECHA'], dayfirst=True)\n",
     "\n",
     "df_pel22Y_4['ENTITY']='pelequen'\n",
-    "\"--------pel23M--------------------------------------------------------------------------------------------------------\"\n",
+    "\"--------pelUPDATE--------------------------------------------------------------------------------------------------------\"\n",
     "\n",
     "#MAKE DATAFRAME FROM SPREADSHEET\n",
-    "pel23M_data = pel23M_book.sheets(pel23M_sheet).range(pel23M_rangeData).value\n",
-    "df_pel23M = pd.DataFrame(pel23M_data)\n",
+    "pelUPDATE_data = pelUPDATE_book.sheets(pelUPDATE_sheet).range(pelUPDATE_rangeData).value\n",
+    "df_pelUPDATE = pd.DataFrame(pelUPDATE_data)\n",
     "\n",
     "#DROP UNNECESARY COLUMNS\n",
-    "df_pel23M_2 = df_pel23M.drop([5,6,7,10], axis=1)\n",
-    "df_pel23M_3 = df_pel23M_2[df_pel23M_2[0].str.contains('SALDO ANTERIOR')==False]\n",
-    "df_pel23M_4 = df_pel23M_3.dropna(thresh=2)\n",
+    "df_pelUPDATE_2 = df_pelUPDATE.drop([5,6,7,10], axis=1)\n",
+    "df_pelUPDATE_3 = df_pelUPDATE_2[df_pelUPDATE_2[0].str.contains('SALDO ANTERIOR')==False]\n",
+    "df_pelUPDATE_4 = df_pelUPDATE_3.dropna(thresh=2)\n",
     "\n",
     "# ACCOUNT NAMES\n",
-    "df_pel23M_accounts = df_pel23M_2[df_pel23M_2[0].str.contains('SALDO ANTERIOR')==True]\n",
+    "df_pelUPDATE_accounts = df_pelUPDATE_2[df_pelUPDATE_2[0].str.contains('SALDO ANTERIOR')==True]\n",
     "\n",
     "#MAKING ROW ONE THE HEADER\n",
-    "df_pel23M_4.columns = df_pel23M_4.iloc[0]\n",
-    "df_pel23M_4 = df_pel23M_4[1:]\n",
+    "df_pelUPDATE_4.columns = df_pelUPDATE_4.iloc[0]\n",
+    "df_pelUPDATE_4 = df_pelUPDATE_4[1:]\n",
     "\n",
     "#PARSE DATE\n",
-    "df_pel23M_4['FECHA']=pd.to_datetime(df_pel23M_4['FECHA'], dayfirst=True)\n",
+    "df_pelUPDATE_4['FECHA']=pd.to_datetime(df_pelUPDATE_4['FECHA'], dayfirst=True)\n",
     "\n",
-    "df_pel23M_4['ENTITY']='pelequen'\n",
+    "df_pelUPDATE_4['ENTITY']='pelequen'\n",
     "\n",
     "\n",
     "\"--------dar22Y--------------------------------------------------------------------------------------------------------\"\n",
@@ -249,28 +250,28 @@
     "\n",
     "df_dar22Y_4['ENTITY']='don_dario'\n",
     "\n",
-    "\"--------dar23M--------------------------------------------------------------------------------------------------------\"\n",
+    "\"--------darUPDATE--------------------------------------------------------------------------------------------------------\"\n",
     "\n",
     "#MAKE DATAFRAME FROM SPREADSHEET\n",
-    "dar23M_data = dar23M_book.sheets(dar23M_sheet).range(dar23M_rangeData).value\n",
-    "df_dar23M = pd.DataFrame(dar23M_data)\n",
+    "darUPDATE_data = darUPDATE_book.sheets(darUPDATE_sheet).range(darUPDATE_rangeData).value\n",
+    "df_darUPDATE = pd.DataFrame(darUPDATE_data)\n",
     "\n",
     "#DROP UNNECESARY COLUMNS\n",
-    "df_dar23M_2 = df_dar23M.drop([5,6,7,10], axis=1)\n",
-    "df_dar23M_3 = df_dar23M_2[df_dar23M_2[0].str.contains('SALDO ANTERIOR')==False]\n",
-    "df_dar23M_4 = df_dar23M_3.dropna(thresh=2)\n",
+    "df_darUPDATE_2 = df_darUPDATE.drop([5,6,7,10], axis=1)\n",
+    "df_darUPDATE_3 = df_darUPDATE_2[df_darUPDATE_2[0].str.contains('SALDO ANTERIOR')==False]\n",
+    "df_darUPDATE_4 = df_darUPDATE_3.dropna(thresh=2)\n",
     "\n",
     "# ACCOUNT NAMES\n",
-    "df_dar23M_accounts = df_dar23M_2[df_dar23M_2[0].str.contains('SALDO ANTERIOR')==True]\n",
+    "df_darUPDATE_accounts = df_darUPDATE_2[df_darUPDATE_2[0].str.contains('SALDO ANTERIOR')==True]\n",
     "\n",
     "#MAKING ROW ONE THE HEADER\n",
-    "df_dar23M_4.columns = df_dar23M_4.iloc[0]\n",
-    "df_dar23M_4 = df_dar23M_4[1:]\n",
+    "df_darUPDATE_4.columns = df_darUPDATE_4.iloc[0]\n",
+    "df_darUPDATE_4 = df_darUPDATE_4[1:]\n",
     "\n",
     "#PARSE DATE\n",
-    "df_dar23M_4['FECHA']=pd.to_datetime(df_dar23M_4['FECHA'], dayfirst=True)\n",
+    "df_darUPDATE_4['FECHA']=pd.to_datetime(df_darUPDATE_4['FECHA'], dayfirst=True)\n",
     "\n",
-    "df_dar23M_4['ENTITY']='don_dario'\n",
+    "df_darUPDATE_4['ENTITY']='don_dario'\n",
     "\n",
     "\n",
     "\"--------and20Y--------------------------------------------------------------------------------------------------------\"\n",
@@ -339,46 +340,46 @@
     "df_and22Y_4['FECHA']=pd.to_datetime(df_and22Y_4['FECHA'], dayfirst=True)\n",
     "\n",
     "df_and22Y_4['ENTITY']='andino'\n",
-    "\"--------and23M--------------------------------------------------------------------------------------------------------\"\n",
+    "\"--------andUPDATE--------------------------------------------------------------------------------------------------------\"\n",
     "\n",
     "#MAKE DATAFRAME FROM SPREADSHEET\n",
-    "and23M_data = and23M_book.sheets(and23M_sheet).range(and23M_rangeData).value\n",
-    "df_and23M = pd.DataFrame(and23M_data)\n",
+    "andUPDATE_data = andUPDATE_book.sheets(andUPDATE_sheet).range(andUPDATE_rangeData).value\n",
+    "df_andUPDATE = pd.DataFrame(andUPDATE_data)\n",
     "\n",
     "#DROP UNNECESARY COLUMNS\n",
-    "df_and23M_2 = df_and23M.drop([5,6,7,10], axis=1)\n",
-    "df_and23M_3 = df_and23M_2[df_and23M_2[0].str.contains('SALDO ANTERIOR')==False]\n",
-    "df_and23M_4 = df_and23M_3.dropna(thresh=2)\n",
+    "df_andUPDATE_2 = df_andUPDATE.drop([5,6,7,10], axis=1)\n",
+    "df_andUPDATE_3 = df_andUPDATE_2[df_andUPDATE_2[0].str.contains('SALDO ANTERIOR')==False]\n",
+    "df_andUPDATE_4 = df_andUPDATE_3.dropna(thresh=2)\n",
     "\n",
     "# ACCOUNT NAMES\n",
-    "df_and23M_accounts = df_and23M_2[df_and23M_2[0].str.contains('SALDO ANTERIOR')==True]\n",
+    "df_andUPDATE_accounts = df_andUPDATE_2[df_andUPDATE_2[0].str.contains('SALDO ANTERIOR')==True]\n",
     "\n",
     "#MAKING ROW ONE THE HEADER\n",
-    "df_and23M_4.columns = df_and23M_4.iloc[0]\n",
-    "df_and23M_4 = df_and23M_4[1:]\n",
+    "df_andUPDATE_4.columns = df_andUPDATE_4.iloc[0]\n",
+    "df_andUPDATE_4 = df_andUPDATE_4[1:]\n",
     "\n",
     "#PARSE DATE\n",
-    "df_and23M_4['FECHA']=pd.to_datetime(df_and23M_4['FECHA'], dayfirst=True)\n",
+    "df_andUPDATE_4['FECHA']=pd.to_datetime(df_andUPDATE_4['FECHA'], dayfirst=True)\n",
     "\n",
-    "df_and23M_4['ENTITY']='andino'\n",
+    "df_andUPDATE_4['ENTITY']='andino'\n",
     "\n",
     "\n",
     "\n",
-    "# sxc23M: sx chile March 23 (cum),\n",
+    "# sxcUPDATE: sx chile March 23 (cum),\n",
     "# pel21Y\n",
     "# pel22Y\n",
-    "# pel23M\n",
+    "# pelUPDATE\n",
     "# dar22Y\n",
-    "# dar23M\n",
+    "# darUPDATE\n",
     "# and20Y\n",
     "# and21Y\n",
     "# and22Y\n",
-    "# and23M\n",
+    "# andUPDATE\n",
     "\n",
     "\n",
     "\n",
-    "joined_years = pd.concat([df_sxc23M_4,df_pel21Y_4,df_pel22Y_4,df_pel23M_4,df_dar22Y_4,df_dar22Y_4,df_dar23M_4,\n",
-    "                          df_and20Y_4,df_and21Y_4,df_and22Y_4,df_and23M_4,])\n",
+    "joined_years = pd.concat([df_sxcUPDATE_4,df_pel21Y_4,df_pel22Y_4,df_pelUPDATE_4,df_dar22Y_4,df_dar22Y_4,df_darUPDATE_4,\n",
+    "                          df_and20Y_4,df_and21Y_4,df_and22Y_4,df_andUPDATE_4,])\n",
     "\n",
     "acct_uniques = joined_years['CUENTA'].unique()\n",
     "\n",
@@ -403,10 +404,7 @@
     "joined_years\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
